[package]
name = "dt"
version = "0.1.0"
edition = "2021"

[[bin]]
name= "date"
path="src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive"] }
chrono = {version="0.4.19", features = ["unstable-locales"]}
timezone-abbreviations = "0.1.0"

[dev-dependencies]
chrono-tz = "0.6.0"